--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
+    "react-notifications": "^1.4.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
