--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "es6-promisify": "^6.0.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "md5": "^2.2.1",
     "mongoose": "^5.5.1",
     "mongoose-mongodb-errors": "0.0.2",
     "node": "^11.13.0",
     "nodemon": "^1.18.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "validator": "^10.11.0"
   }
