--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
-    "es6-promisify": "^6.0.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
