--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.2.1",
     "mongoose": "^5.5.8",
     "mongoose-mongodb-errors": "0.0.2",
+    "mongoose-unique-validator": "^2.0.3",
     "node": "^11.13.0",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
