--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "md5": "^2.2.1",
