--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose-mongodb-errors": "0.0.2",
     "mongoose-unique-validator": "^2.0.3",
     "node": "^11.13.0",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
