--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "backend",
+  "name": "react-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
@@ -17,15 +17,15 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-sanitizer": "^1.0.5",
-    "express-session": "^1.16.1",
+    "express-session": "^1.16.2",
     "express-validator": "^5.3.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.5.8",
+    "mongoose": "^5.6.11",
     "mongoose-mongodb-errors": "0.0.2",
     "mongoose-unique-validator": "^2.0.3",
-    "node": "^11.13.0",
+    "node": "^11.15.0",
     "nodemailer": "^6.3.0",
-    "nodemon": "^1.18.11",
+    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
