--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
+    "express-sslify": "^1.2.0",
     "express-validator": "^5.3.1",
     "md5": "^2.2.1",
     "mongoose": "^5.6.11",
