--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,10 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "react-ga": "^2.6.0",
     "react-loading": "^2.0.3",
     "react-notifications": "^1.4.3",
     "react-router-dom": "^5.0.1",
+    "react-router-ga": "^1.2.1",
     "react-scripts": "^3.0.0",
     "react-transition-group": "^1.2.1"
   },
