--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "connect-mongo": "^2.0.3",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-sanitizer": "^1.0.5",
-    "express-session": "^1.16.2",
-    "express-sslify": "^1.2.0",
-    "express-validator": "^5.3.1",
-    "md5": "^2.2.1",
-    "mongoose": "^5.6.11",
+    "body-parser": "1.18.3",
+    "connect-mongo": "2.0.3",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
+    "dotenv": "7.0.0",
+    "express": "4.16.4",
+    "express-sanitizer": "1.0.5",
+    "express-session": "1.16.2",
+    "express-sslify": "1.2.0",
+    "express-validator": "5.3.1",
+    "md5": "2.2.1",
+    "mongoose": "5.6.11",
     "mongoose-mongodb-errors": "0.0.2",
-    "mongoose-unique-validator": "^2.0.3",
-    "node": "^11.15.0",
-    "nodemailer": "^6.3.0",
-    "nodemon": "^1.19.1",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1",
-    "validator": "^10.11.0"
+    "mongoose-unique-validator": "2.0.3",
+    "node": "11.15.0",
+    "nodemailer": "6.3.0",
+    "nodemon": "1.19.1",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "5.0.1",
+    "validator": "10.11.0"
   },
   "engines": {
     "node": "11.11.0"
